[B]1.0.1[/B]
- device token javítva
[B]1.0.0[/B]
- Első verzió