@@ -3,6 +3,8 @@
 
 Kodi kiegészítő a tarrmobiltv.hu-hoz
 
+1.0.2 - felhasználónév vagy telefonszám használat hozzáadva
+
 1.0.1 - device token javítva
 
 1.0.0 - Első verzió
