@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <settings>
     <category label="Bejelentkezés">
-        <setting label="Telefonszám" type="text" id="username" default=""/>
+        <setting label="Felhasználónév/Tel." type="text" id="username" default=""/>
         <setting label="Jelszó" type="text" id="password" option="hidden" default=""/>
 	</category>
 </settings>
